# NSS-Safe-Data-Tool

./: conftest.py  main.py  pyproject.toml  requirements.txt
module0_config_generation/: README.md  config_writer.py  schema_detector.py
module0_config_generation/tests/: test_config_writer.py  test_schema_detector.py
module1_risk_assessment/: README.md  risk_assessor.py
module1_risk_assessment/configs/: ingestion_config.yaml
module1_risk_assessment/tests/: test_risk_assessor.py
module2_privacy_enhancement/: README.md  privacy_enhancer.py
module2_privacy_enhancement/tests/: test_privacy_enhancer.py
module3_utility_assessment/: README.md  utility_assessor.py
module3_utility_assessment/tests/: test_utility_assessor.py
module4_reporting/: README.md  config_models.py  report_generator.py
module4_reporting/tests/: test_report_generator.py
